# docx-template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml  snapshots.sh
examples/image-replacement/: main.rs
examples/insert-table/: input.docx  main.rs
examples/table-markup/: input.docx  main.rs
examples/template/: main.rs
features/: checklist.docx  comment_and_image.docx  comments_and_bookmarks.docx  order_to_supplier_res.docx
features/checklist/word/: document.xml  numbering.xml
features/comment_and_image/word/: comments.xml  document.xml
features/comment_and_image/word/_rels/: document.xml.rels
features/comments_and_bookmarks/: [Content_Types].xml
features/comments_and_bookmarks/word/: comments.xml  document.xml  numbering.xml  styles.xml
features/comments_and_bookmarks/word/_rels/: document.xml.rels
features/order_to_supplier_res/: [Content_Types].xml
features/order_to_supplier_res/_rels/: .rels
features/order_to_supplier_res/word/: document.xml  fontTable.xml  footer1.xml  header1.xml  settings.xml  styles.xml
features/order_to_supplier_res/word/_rels/: document.xml.rels  header1.xml.rels
features/order_to_supplier_res/word/theme/: theme1.xml
features/template/docProps/: app.xml  core.xml
features/template/word/: document.xml  fontTable.xml  footer1.xml  header1.xml  settings.xml
src/: doc_layout_node.rs  docx_file.rs  docx_part.rs  docx_template.rs  fmt_to_io_adapter.rs  iter_tools.rs  lib.rs  markup_node.rs  regex.rs  zip_file_ext.rs
src/transformers/: mod.rs
src/transformers/erase_commented/: mod.rs
src/transformers/find_and_replace/: mod.rs  patterns.rs  placeholders.rs  replacement.rs  replacements.rs  value.rs
src/transformers/find_and_replace/tests/: mod.rs
tests/xml-with-placeholders/: input.xml  main.rs
tests/xml-with-placeholders/snapshots/: xml_with_placeholders__test.snap
