[package]
name = "docx-template"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
docx-rust = "0.1.6"
hard-xml = "1.36.0"
itertools = "0.13.0"
quick-xml = "0.35.0"
regex = "1.10.5"
thiserror = "1.0.61"
zip = { version = "~2.1.3", default-features = false, features = ["deflate"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.5"
insta = "1.38.0"
serde_with = "3.8.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
