[package]
name = "docx-template"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "image-replacement"

[features]
default = []

[dependencies]
aho-corasick = "1.1.3"
chrono = { version = "0.4.38", features = ["serde"] }
docx-rust = { version = "0.1.8", optional = true }
hard-xml = "1.36.0"
itertools = "0.13.0"
quick-xml = "0.36.2"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
thiserror = "1.0.64"
zip = { version = "~2.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
indoc = "2.0.5"
insta = "1.40.0"
serde_with = "3.11.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
