[package]
name = "docx-template"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.74.1" # cargo msrv find

authors = ["Igor Strebz"]
categories = ["template-engine"]
description = "Replace {placeholders} and manage content inside DOCX files"
keywords = ["docx", "template", "word", "openxml"]
license = "MIT"
repository = "https://github.com/xamgore/docx-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "image-replacement"

[[example]]
name = "insert-table"
required-features = ["serde", "docx-rs"]

[[example]]
name = "table-markup"
required-features = ["serde"]

[[example]]
name = "template"
required-features = ["serde"]

[[test]]
name = "xml-with-placeholders"

[features]
default = ["serde"]
docx-rs = ["dep:docx-rs", "dep:xml-rs"]
docx-rust = ["dep:docx-rust", "dep:hard-xml"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
aho-corasick = "1.1.3"
docx-rs = { version = "0.4.18-rc19", optional = true }
docx-rust = { version = "0.1.9", optional = true }
hard-xml = { version = "1.36.0", optional = true }
quick-xml = "0.37.4"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", features = ["preserve_order"], optional = true }
thiserror = "2.0.12"
xml-rs = { version = "0.8.25", optional = true }
zip = { version = "~2.5.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
indoc = "2.0.6"
insta = "1.40.0"
serde_with = "3.12.0"
chrono = { version = "0.4.40", features = ["serde"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
